# redmagicfancontrold

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
.tools/: mem.sh
cmake/toolchains/: aarch64-linux-musl.cmake  aarch64-unknown-linux-musl.cmake
config/: config.json
src/: config.c  config.h  fan.c  fan.h  logging.c  logging.h  main.c  socket.c  socket.h
src/config/: config.c  config.h  test_config.c
src/engine/: engine.c  engine.h
src/fan/: fan.c  fan.h
src/ipc/: socket.c  socket.h
src/logging/: logging.c  logging.h
src/runtime/: engine.c  engine.h  runtime.c  runtime.h
tests/: config.json
